--- a/styles.css
+++ b/styles.css
@@ -68,3 +68,15 @@ td {
 .right {
   text-align: right;
 }
+
+.red {
+  color: red;
+}
+
+.blue {
+  color: blue;
+}
+
+.purple {
+  color: purple;
+}
