--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@ body {
 
 .tabla-parametros, .tabla-parametros tr, .tabla-parametros td {
   font-family: 'Bahnschrift';
-  border: 1px solid goldenrod;
+  border: 1px solid orangered;
   width: 100%;
   padding: 1px;
 }
@@ -23,7 +23,7 @@ input {
 }
 
 .tabla {
-  border: 1px solid black;
+  border: none;
 }
 
 table {
